--- a/internal-research-assistant/frontend/index.html
+++ b/internal-research-assistant/frontend/index.html
@@ -1,70 +1,191 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Internal Research Assistant</title>
+  <meta name="description" content="An AI-powered internal research assistant for your company's knowledge base" />
+  <meta name="author" content="Your Company" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: Arial, sans-serif;
-      padding: 40px;
-      max-width: 600px;
+      font-family: 'Inter', sans-serif;
+      background-color: #f8fafc;
+      color: #1e293b;
+      line-height: 1.6;
+      padding: 3rem 1.5rem;
+      max-width: 1000px;
       margin: auto;
-      background-color: #f4f4f4;
     }
-    h2 {
-      color: #333;
+    h1 {
+      font-size: 2.5rem;
+      font-weight: 700;
+      color: #3b82f6;
+      text-align: center;
+    }
+    form {
+      margin: 2rem auto;
+      max-width: 700px;
+      display: flex;
+      gap: 0.5rem;
     }
     input[type="text"] {
-      width: 100%;
-      padding: 12px;
-      font-size: 16px;
-      margin-bottom: 10px;
+      flex: 1;
+      padding: 1rem;
+      font-size: 1rem;
+      border: 1px solid #cbd5e1;
+      border-radius: 0.375rem;
     }
     button {
-      padding: 10px 20px;
-      font-size: 16px;
-      background-color: #4CAF50;
-      color: white;
+      padding: 1rem 1.5rem;
+      background-color: #3b82f6;
+      color: #fff;
       border: none;
+      border-radius: 0.375rem;
       cursor: pointer;
+      font-weight: 600;
     }
     button:hover {
-      background-color: #45a049;
+      background-color: #2563eb;
     }
-    #answer {
-      margin-top: 20px;
-      font-weight: bold;
+    .answer-container {
+      margin-top: 2rem;
+      padding: 1.5rem;
+      background-color: #fff;
+      border-radius: 0.5rem;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      border-top: 4px solid #3b82f6;
+    }
+    .answer-title {
+      font-size: 1.25rem;
+      font-weight: 600;
+      margin-bottom: 0.75rem;
+    }
+    .answer-content {
+      white-space: pre-wrap;
+      line-height: 1.7;
+    }
+    .quick-questions {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 0.5rem;
+      margin-top: 1rem;
+    }
+    .question-pill {
+      padding: 0.5rem 1rem;
+      background: #e0f2fe;
+      border: 1px solid #bae6fd;
+      border-radius: 9999px;
+      cursor: pointer;
+      font-size: 0.875rem;
+      transition: 0.3s ease;
+    }
+    .question-pill:hover {
+      background-color: #bae6fd;
+    }
+    .loading {
+      text-align: center;
+      margin-top: 2rem;
     }
   </style>
 </head>
 <body>
-  <h2>Ask a Question</h2>
-  <form id="query-form">
-    <input type="text" id="question" placeholder="Type your question..." required>
+  <h1>Internal Research Assistant</h1>
+  <form id="search-form">
+    <input type="text" id="search-input" placeholder="Ask a question about your documents..." required />
     <button type="submit">Ask</button>
   </form>
-  <p><strong>Answer:</strong> <span id="answer"></span></p>
+
+  <div class="quick-questions">
+    <div class="question-pill" data-question="How many days of maternity leave are allowed?">Maternity leave policy</div>
+    <div class="question-pill" data-question="How do I reset the SmartControl device?">Device reset steps</div>
+    <div class="question-pill" data-question="Can earned leave be carried forward?">Carry forward leave</div>
+    <div class="question-pill" data-question="What happens after resetting the device?">Post-reset info</div>
+  </div>
+
+  <div id="loading-state" class="loading" style="display: none;">
+    <p>Loading answer...</p>
+  </div>
+
+  <div id="answer-card" class="answer-container" style="display: none;">
+    <div class="answer-title">Answer</div>
+    <div id="answer-content" class="answer-content"></div>
+  </div>
+
+  <div id="empty-state" class="loading">
+    <p>Enter a question or try one of the suggestions above.</p>
+  </div>
 
   <script>
-    const form = document.getElementById('query-form');
-    form.onsubmit = async (e) => {
-      e.preventDefault();
-      const question = document.getElementById('question').value;
-      const formData = new FormData();
-      formData.append('question', question);
+    document.addEventListener('DOMContentLoaded', function () {
+      const form = document.getElementById('search-form');
+      const input = document.getElementById('search-input');
+      const answerCard = document.getElementById('answer-card');
+      const answerContent = document.getElementById('answer-content');
+      const emptyState = document.getElementById('empty-state');
+      const loadingState = document.getElementById('loading-state');
+      const questionPills = document.querySelectorAll('.question-pill');
 
-      try {
-        const res = await fetch('/ask', {
+      function askQuestion(question) {
+        if (!question.trim()) return;
+
+        emptyState.style.display = 'none';
+        answerCard.style.display = 'none';
+        loadingState.style.display = 'block';
+
+        const formData = new URLSearchParams();
+        formData.append('question', question);
+
+        fetch('/ask', {
           method: 'POST',
+          headers: {
+            'Content-Type': 'application/x-www-form-urlencoded'
+          },
           body: formData
-        });
-        const data = await res.json();
-        document.getElementById('answer').innerText = data.answer || 'No answer found.';
-      } catch (err) {
-        document.getElementById('answer').innerText = 'Error: Unable to fetch answer.';
-        console.error(err);
+        })
+          .then(res => res.json())
+          .then(data => {
+            loadingState.style.display = 'none';
+            answerCard.style.display = 'block';
+
+            let sourceNote = '';
+            if (data.source_documents && Array.isArray(data.source_documents)) {
+              const uniqueSources = new Set();
+              data.source_documents.forEach(doc => {
+                const src = doc.metadata?.source || 'Unnamed document';
+                uniqueSources.add(src);
+              });
+              if (uniqueSources.size > 0) {
+                sourceNote = `\n\n📄 Sources:\n` + Array.from(uniqueSources).map(s => `- ${s}`).join('\n');
+              }
+            }
+
+            answerContent.textContent = (data.answer || 'No answer found.') + sourceNote;
+          })
+          .catch(err => {
+            loadingState.style.display = 'none';
+            answerCard.style.display = 'block';
+            answerContent.textContent = 'Error fetching answer. Please try again.';
+          });
       }
-    };
+
+      form.addEventListener('submit', function (e) {
+        e.preventDefault();
+        const question = input.value.trim();
+        askQuestion(question);
+      });
+
+      questionPills.forEach(pill => {
+        pill.addEventListener('click', function () {
+          const question = this.getAttribute('data-question');
+          input.value = question;
+          askQuestion(question);
+        });
+      });
+    });
   </script>
 </body>
 </html>
